# EdgeLorD

./: .gitignore  AUDIT_SUMMARY.md  CODE_ACTIONS_DEMO_GUIDE.md  COMMENT_SYNTAX_AND_SEMANTICS_FIX.md  COMMENT_SYNTAX_FIX.md  Cargo.toml  DIAGNOSTICS_AND_UX_PLAN.md  DIAGNOSTIC_PUBLICATION_AUDIT.md  DIAGNOSTIC_UPDATE_BUG_FIX.md  DIAGNOSTIC_UPDATE_FIX_COMPLETE.md  EDGELORD_LSP_IMPROVEMENT_PLAN.md  GETTING_STARTED.md  HANDOFF.md  HELIX_LSP_SUCCESS_REPORT.md  HELIX_TESTING_SUCCESS.md  HOLE_OCCURRENCE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  KERNEL_PROOF_STATE_PLAN.md  LSP_COMPLETION_SUMMARY.md  MACLANE_SYNTAX_REFERENCE.md  MADLIB_TACTICS_STDLIB_PLAN.md  MANUAL_TEST_GUIDE.md  MULTIPLE_DIAGNOSTICS_PLAN.md  PHASE_1_1_ACCEPTANCE_SPEC.md  PHASE_1_1_IMPLEMENTATION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_FINAL_VALIDATION.md  PHASE_1_FINGERPRINT_SPEC.md  PHASE_1_PRODUCTION_READY.md  PHASE_1_SOUNDNESS_FIX.md  PHASE_6_HONEST_STATUS.md  PHASE_6_TEST_HARNESS_FIXED.md  PHASE_6_WORKSPACE_REPORT_INTEGRATION_COMPLETE.md  QUICK_DEMO.md  README.md  README_PHASE_1_1.md  REMAINING_DIAGNOSTIC_ISSUES.md  REPORT_DBQ_CHECK_UNIT.md  SERIALIZATION_FIX_COMPLETE.md  (+11 more)
.helix/: languages.toml
artifacts/: semantic_bundle_CHANGED_LATEST.md
benchmarks/: PHASE_1_BASELINE.csv  PHASE_1_BASELINE.md  PHASE_1_CACHED.csv  PHASE_1_REPORT.md  PHASE_C2_SPEC.md
proptest-regressions/: span_conversion.txt
src/: caching.rs  client_sink.rs  db_memo.rs  dependency_graph.rs  document.rs  edgelord_pretty_ctx.rs  goals_panel.rs  highlight.rs  lib.rs  lsp.rs  main.rs  pattern_overlay.rs  proof_session.rs  span_conversion.rs
test_examples/: code_action_demo.maclane  multi_error.maclane  simple_error.maclane
tests/: bench_phase1_cache.rs  bench_phase1_report.rs  cache_phase1_1_bench.rs  cache_phase1_1_invariants.rs  cache_phase1_1_races.rs  db7_hover_preview.rs  diagnostic_publishing_tests.proptest-regressions  diagnostic_publishing_tests.rs  diff_tests.rs  explain_tests.rs  highlight_test.rs  (+22 more)
(+69 files in other folders)
