[package]
name = "edgelord-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
source_span = { path = "../clean_kernel/crates/source_span" }
codeswitch = { path = "../codeswitch" } # Kept as a normal dependency
new_surface_syntax = { path = "../clean_kernel/satellites/src/surface_maclane/NewSurfaceSyntaxModule" }
 # Updated to match observed version in cargo test output

async-trait = "0.1.89"

[dev-dependencies]
pretty_assertions = "1.4"