[package]
name = "edgelord-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
source_span = { path = "../clean_kernel/crates/source_span" }
codeswitch = { path = "../codeswitch" } # Kept as a normal dependency
comrade_lisp = { path = "../clean_kernel/satellites/src/surface_maclane/comrade_lisp" }
sniper_db = { path = "../clean_kernel/crates/sniper_db" }
 # Updated to match observed version in cargo test output

async-trait = "0.1.89"
crc32fast = "1.3"
tantivy = "0.22"
tcb_core = { path = "../clean_kernel/tcb_core" }
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.5"